// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-1nah2hh,
[data-css-1nah2hh] {
  position: relative;
}

.css-1nah2hh > div,
[data-css-1nah2hh] > div {
  animation-fill-mode: both;
  background: #ffffff;
  border-radius: 100%;
  height: 15px;
  position: absolute;
  width: 15px;
  -webkit-animation-fill-mode: both;
}

<BallSpinLoader
  loading={true}
>
  <div
    data-css-1nah2hh=""
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</BallSpinLoader>
`;

exports[`enzyme.render 1`] = `
.css-1nah2hh,
[data-css-1nah2hh] {
  position: relative;
}

.css-1nah2hh > div,
[data-css-1nah2hh] > div {
  animation-fill-mode: both;
  background: #ffffff;
  border-radius: 100%;
  height: 15px;
  position: absolute;
  width: 15px;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-1nah2hh=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-1nah2hh,
[data-css-1nah2hh] {
  position: relative;
}

.css-1nah2hh > div,
[data-css-1nah2hh] > div {
  animation-fill-mode: both;
  background: #ffffff;
  border-radius: 100%;
  height: 15px;
  position: absolute;
  width: 15px;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-1nah2hh=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;
